--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
 
+  <!-- Hier soll Logo und Menu-Buttons sein -->
   <div class="scrollmenu">
     <a href="#home">füsio.ch</a>
     <a href="#angebot">Angebot</a>
@@ -18,13 +19,8 @@
     <a href="#referenzen">Referenzen</a>
     <a href="#kontakt">Kontakt</a>
   </div>
-
-
-  <!-- Hier soll Logo und Menu-Buttons sein -->
   <div class="banner1">
-    <div>
-      <img src="images/füsio_logo.png" class="füsio-ch-logo">
-    </div>
+    <img src="images/füsio_logo.png" class="füsio-ch-logo">
   </div>
 
   <!-- Hier soll ein Banner stehen, welcher gewisser Inhalt hat (tbd) -->
@@ -32,23 +28,26 @@
     <img src="images/füsio-adjusted.jpg" class=füsio-ch-picture>
     <h1> <strong> Ihr Partner zu ganzheitlicher Gesundheit </strong> </h1>
   </div>
+
+  <div id="section-offering" class="section-black">
+    Angebot Section
   </div>
 
-  <div class="section">
+  <!-- Hier sind testimonial von Kunden aufgelistet -->
+  <div id="section-testimonial">
     <h3> Was unsere Kunden sagen:</h3>
-
     <blockquote class="testimonial">
       <img class="avatar" src=images/reni1.jpg>
       <p>
-        "Nadine ist einfach die Beste. Vielen Dank für alles."
+        "Nadine ist einfach die Beste."
       </p>
-      <cite> Bill, co-founder MCS Inc. </cite>
+      <cite> Hans, co-founder MCS Inc. </cite>
     </blockquote>
 
     <blockquote class="testimonial">
       <img class="avatar" src=images/reni2.jpg>
       <p>
-        "I love you!"
+        "Komme gerne wieder!"
       </p>
       <cite> Renato, co-founder VIRGO Wear </cite>
     </blockquote>
