remove Angebot section

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <h1> <strong> Ihr Partner zu ganzheitlicher Gesundheit </strong> </h1>
   </div>
 
-  <div id="section-offering" class="section-black">
+  <!-- <div id="section-offering" class="section-black">
     Angebot Section
-  </div>
+  </div> -->
 
   <!-- Hier sind testimonial von Kunden aufgelistet -->
   <div id="section-testimonial">
